<resources>
    <string name="app_name">FBTA</string>
    <string name="tvPoids">Poids</string>
    <string name="tvTaille">Taille</string>
    <string name="tvNom">Nom</string>
    <string name="tvPrenom">Prénom</string>
    <string name="tvAge">Age</string>
    <string name="tvSexe">Sexe</string>
    <string name="tvSport">Activité Sportive</string>
    <string name="tvObjectif">Objectif de poids</string>
    <string name="btnProfil">Valider</string>
    <string name="nom_de_l_aliment">Nom de l\'aliment</string>
    <string name="calories">Calories</string>
    <string name="btn_inscrire">S inscrire</string>
    <string name="quantit">Quantité :</string>
    <string name="_0">0</string>
    <string name="todo">TODO</string>
    <string name="calories_consomm_es">Consommé :</string>
    <string name="objectif">Objectif :</string>
    <string name="_2500">2500</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="alimentation">Alimentation</string>
    <string name="evolution">Evolution</string>
    <string name="activit_sportive">Activité Sportive</string>
    <string name="affdate">TextView</string>
    <string name="saisie_du_poids">Saisie du Poids</string>
</resources>
